Update Prediction of Continuous Well Logs.ipynb

--- a/Prediction of Continuous Well Logs.ipynb
+++ b/Prediction of Continuous Well Logs.ipynb
@@ -33,8 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -1398,7 +1397,7 @@
     {
      "data": {
       "text/plain": [
-       "['model.pkl']"
+       "['cmodel.pkl']"
       ]
      },
      "execution_count": 29,
