Update Prediction of Continuous Well Logs.ipynb

--- a/Prediction of Continuous Well Logs.ipynb
+++ b/Prediction of Continuous Well Logs.ipynb
@@ -1408,7 +1408,7 @@
    "source": [
     "\n",
     "# save\n",
-    "joblib.dump(regr, \"model.pkl\") "
+    "joblib.dump(regr, \"cmodel.pkl\") "
    ]
   },
   {
